# FourierAnim

./: .gitignore  README.md  pyproject.toml
src/: FourierAnim.py  __init__.py
tests/: T1.py
